# tiktok-ecommerce-automation-system

./: .env.example  .gitignore  CONTRIBUTING.md  HRC.MD  MVP详细开发计划-6周分阶段执行方案.md  Makefile  README.md  TikTok跨境电商全自动运营系统-PRD文档说明.md  TikTok跨境电商全自动运营系统-详细需求说明书V1.0.md  docker-compose.dev.yml  docker-compose.yml  generate_prd.js  开发团队多Agent协同配置完整文档.md  附录A-验收标准与测试方案.md  附录B-风险评估与应急预案.md  需求MVP简化版.MD
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 002_add_fulfillment_and_cs_tables.py  f950df57a1e2_initial_migration.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/automation/: alibaba_automation.py
backend/app/clients/: alibaba_client.py
backend/app/core/: ai_config.py  database.py  exceptions.py  redis.py  security.py
backend/app/models/: __init__.py  alert.py  base.py  customer_service.py  faq.py  finance.py  fulfillment.py  mapping.py  material.py  order.py  product.py  user.py
backend/app/schemas/: auth.py  common.py  material.py  order.py  product.py
backend/app/services/: address_service.py  anomaly_service.py  conversation_service.py  cs_service.py  faq_service.py  finance_service.py  fulfillment_service.py  intent_service.py  listing_service.py  logistics_service.py  matching_service.py  order_service.py  order_state_machine.py  pricing_engine.py  pricing_service.py  product_service.py  purchase_service.py  response_generator.py  (+6 more)
backend/scripts/: seed_data.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_products.py
(+78 files in other folders)
